--- a/cloud/app.yaml
+++ b/cloud/app.yaml
@@ -7,5 +7,10 @@ handlers:
 - url: /static
   static_dir: static
 
+- url: /admin/.*
+  script: $PYTHON_LIB/google/appengine/ext/admin
+  login: admin
+
 - url: /.*
   script: main.py
+  login: admin
