Imported http://appengine-cookbook.appspot.com/recipe/xml-rpc-server-using-google-app-engine/ example code in the application. We can now dispatch xmlrpc calls from the peer.

--- a/cloud/app.yaml
+++ b/cloud/app.yaml
@@ -15,6 +15,9 @@ handlers:
   script: $PYTHON_LIB/google/appengine/ext/admin
   login: admin
 
+- url: /xmlrpc/.*
+  script: xmlrpcserver/myserver.py
+
 - url: /.*
   script: main.py
   login: admin
