Had to try a different approach to the XMLRPC server on appengine. The previous method did not work with django. This method does. An image can be posted by XMLRPC as shown in client.py in peerserver.

--- a/cloud/app.yaml
+++ b/cloud/app.yaml
@@ -16,7 +16,7 @@ handlers:
   login: admin
 
 - url: /xmlrpc/.*
-  script: xmlrpcserver/myserver.py
+  script: main.py
 
 - url: /.*
   script: main.py
