Experiment with AJAX.

--- a/cloud/app.yaml
+++ b/cloud/app.yaml
@@ -18,6 +18,9 @@ handlers:
 - url: /xmlrpc/.*
   script: main.py
 
+- url: /ajax/.*
+  script: main.py
+
 - url: /.*
   script: main.py
   login: admin
